objects/pse__Team__c.object
<CustomObject>
    <description>A group of resources who work together.</description>
    <fields>
        <fullName>pse__All_Team_Members__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When true, the schedule is sent to all team members when you click the Send Schedule button.</description>
        <inlineHelpText>When true, the schedule is sent to all team members when you click the Send Schedule button.</inlineHelpText>
        <label>All Team Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Anyone_With_Edit_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, a notification is sent to all team members with edit access when a team schedule is swapped.</description>
        <inlineHelpText>When true, a notification is sent to all team members with edit access when a team schedule is swapped.</inlineHelpText>
        <label>Anyone with Edit Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Description__c</fullName>
        <description>The description for the team.</description>
        <inlineHelpText>The description for the team.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Enable_Swapping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to let team members swap shifts on the associated team schedule. This field is deselected by default.</description>
        <inlineHelpText>Select to let team members swap shifts on the associated team schedule. This field is deselected by default.</inlineHelpText>
        <label>Enable Swapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Now_Assigned__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When true, a notification is sent to the newly-assigned team member when a team schedule is swapped.</description>
        <inlineHelpText>When true, a notification is sent to the newly-assigned team member when a team schedule is swapped.</inlineHelpText>
        <label>Currently Assigned Team Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Previously_Assigned__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When true, a notification is sent to the previously-assigned team member when a team schedule is swapped.</description>
        <inlineHelpText>When true, a notification is sent to the previously-assigned team member when a team schedule is swapped.</inlineHelpText>
        <label>Previously Assigned Team Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The project associated with the team.</description>
        <inlineHelpText>The project associated with the team.</inlineHelpText>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Teams</relationshipLabel>
        <relationshipName>Teams</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Schedule_Custom_Template_Name__c</fullName>
        <description>Specifies the custom email template to use for sending team schedules.</description>
        <inlineHelpText>Specifies the custom email template to use for sending team schedules.</inlineHelpText>
        <label>Custom Template Name (Schedule)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Schedule_Other_Email_Addresses__c</fullName>
        <description>Specifies email addresses to receive the team schedule. The value is a comma-delimited list of email addresses.</description>
        <inlineHelpText>Specifies email addresses to receive the team schedule. The value is a comma-delimited list of email addresses.</inlineHelpText>
        <label>Other Email Addresses (Schedule)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Schedule_Send_Email_To_Others__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, the schedule is sent to email addresses specified in the Other Email Addresses field when you click the Send Schedule button.</description>
        <inlineHelpText>When true, the schedule is sent to email addresses specified in the Other Email Addresses field when you click the Send Schedule button.</inlineHelpText>
        <label>Send Email to Others (Schedule)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Schedule_Use_Custom_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, the schedule email uses the email template defined in the Custom Template Name (Schedule) field.</description>
        <inlineHelpText>When true, the schedule email uses the email template defined in the Custom Template Name (Schedule) field.</inlineHelpText>
        <label>Use Custom Template (Schedule)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Swap_Custom_Template_Name__c</fullName>
        <description>Specifies the custom email template to use for sending team schedule swap notifications.</description>
        <inlineHelpText>Specifies the custom email template to use for sending team schedule swap notifications.</inlineHelpText>
        <label>Custom Template Name (Swap)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Swap_Other_Email_Addresses__c</fullName>
        <description>Specifies email addresses to receive a notification when a team schedule is swapped. The value is a comma-delimited list of email addresses.</description>
        <inlineHelpText>Specifies email addresses to receive a notification when a team schedule is swapped. The value is a comma-delimited list of email addresses.</inlineHelpText>
        <label>Other Email Addresses (Swap)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Swap_Send_Email_To_Others__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, a notification is sent to all email addresses defined in the Send Email to Others (Swap) field when a team schedule is swapped.</description>
        <inlineHelpText>When true, a notification is sent to all email addresses defined in the Send Email to Others (Swap) field when a team schedule is swapped.</inlineHelpText>
        <label>Send Email to Others (Swap)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Swap_Use_Custom_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, the swap notification email uses the email template defined in the Custom Template Name (Swap) field.</description>
        <inlineHelpText>When true, the swap notification email uses the email template defined in the Custom Template Name (Swap) field.</inlineHelpText>
        <label>Use Custom Template (Swap)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Team_Owner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The resource that owns the team.</description>
        <inlineHelpText>The resource that owns the team.</inlineHelpText>
        <label>Team Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Team</relationshipLabel>
        <relationshipName>Team</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Time_Zone__c</fullName>
        <label>Time Zone</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa/Algiers</fullName>
                </value>
                <value>
                    <fullName>Africa/Cairo</fullName>
                </value>
                <value>
                    <fullName>Africa/Casablanca</fullName>
                </value>
                <value>
                    <fullName>Africa/Johannesburg</fullName>
                </value>
                <value>
                    <fullName>Africa/Nairobi</fullName>
                </value>
                <value>
                    <fullName>America/Adak</fullName>
                </value>
                <value>
                    <fullName>America/Anchorage</fullName>
                </value>
                <value>
                    <fullName>America/Argentina/Buenos_Aires</fullName>
                </value>
                <value>
                    <fullName>America/Bogota</fullName>
                </value>
                <value>
                    <fullName>America/Caracas</fullName>
                </value>
                <value>
                    <fullName>America/Chicago</fullName>
                </value>
                <value>
                    <fullName>America/Denver</fullName>
                </value>
                <value>
                    <fullName>America/El_Salvador</fullName>
                </value>
                <value>
                    <fullName>America/Halifax</fullName>
                </value>
                <value>
                    <fullName>America/Indiana/Indianapolis</fullName>
                </value>
                <value>
                    <fullName>America/Lima</fullName>
                </value>
                <value>
                    <fullName>America/Los_Angeles</fullName>
                </value>
                <value>
                    <fullName>America/Mazatlan</fullName>
                </value>
                <value>
                    <fullName>America/Mexico_City</fullName>
                </value>
                <value>
                    <fullName>America/New_York</fullName>
                </value>
                <value>
                    <fullName>America/Panama</fullName>
                </value>
                <value>
                    <fullName>America/Phoenix</fullName>
                </value>
                <value>
                    <fullName>America/Puerto_Rico</fullName>
                </value>
                <value>
                    <fullName>America/Santiago</fullName>
                </value>
                <value>
                    <fullName>America/Sao_Paulo</fullName>
                </value>
                <value>
                    <fullName>America/Scoresbysund</fullName>
                </value>
                <value>
                    <fullName>America/St_Johns</fullName>
                </value>
                <value>
                    <fullName>America/Tijuana</fullName>
                </value>
                <value>
                    <fullName>Asia/Baghdad</fullName>
                </value>
                <value>
                    <fullName>Asia/Baku</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Team</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>pse__Active_Project</fullName>
        <active>true</active>
        <description>Validation message indicating that a project must be active when associated with a team</description>
        <errorConditionFormula>AND( NOT(ISNULL(pse__Project__c)), pse__Project__r.pse__Is_Active__c  = false)</errorConditionFormula>
        <errorMessage>A project must be active to associate it with a team.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Other_Email_Address_Fields_are_Blank</fullName>
        <active>true</active>
        <description>Message indicating the field must not be blank when associated field is selected.</description>
        <errorConditionFormula>OR((AND(pse__Schedule_Send_Email_To_Others__c, ISBLANK(pse__Schedule_Other_Email_Addresses__c))), (AND(pse__Swap_Send_Email_To_Others__c, ISBLANK(pse__Swap_Other_Email_Addresses__c))))</errorConditionFormula>
        <errorMessage>One or both of the email address fields do not contain a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Validate_Other_Email_Address_Fields</fullName>
        <active>true</active>
        <description>Message indicating the field must contain valid email addresses.</description>
        <errorConditionFormula>OR(
				AND(
					AND(
						pse__Schedule_Send_Email_To_Others__c, 
						NOT(
							ISBLANK(
								pse__Schedule_Other_Email_Addresses__c
							)
						)
					), 
					NOT(
						REGEX( 
							pse__Schedule_Other_Email_Addresses__c, &quot;([a-zA-Z0-9!#$%&amp;&apos;*+/=?^_`{|}~-]+(?:\\.[a-zA-Z0-9!#$%&amp;&apos;*+/=?^_`{|}~-]+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9]*[a-zA-Z0-9])?\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9]*[a-zA-Z0-9])?)(?:([ ]*[,]{1}[ ]*([a-zA-Z0-9!#$%&amp;&apos;*+/=?^_`{|}~-]+(?:\\.[a-zA-Z0-9!#$%&amp;&apos;*+/=?^_`{|}~-]+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9]*[a-zA-Z0-9])?\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9]*[a-zA-Z0-9])?))*)&quot;
						)
					)
				),
				AND(
					AND(
						pse__Swap_Send_Email_To_Others__c,
						NOT(
							ISBLANK(pse__Swap_Other_Email_Addresses__c)
						)
					), 
					NOT(
						REGEX(
							pse__Swap_Other_Email_Addresses__c, &quot;([a-zA-Z0-9!#$%&amp;&apos;*+/=?^_`{|}~-]+(?:\\.[a-zA-Z0-9!#$%&amp;&apos;*+/=?^_`{|}~-]+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9]*[a-zA-Z0-9])?\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9]*[a-zA-Z0-9])?)(?:([ ]*[,]{1}[ ]*([a-zA-Z0-9!#$%&amp;&apos;*+/=?^_`{|}~-]+(?:\\.[a-zA-Z0-9!#$%&amp;&apos;*+/=?^_`{|}~-]+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9]*[a-zA-Z0-9])?\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9]*[a-zA-Z0-9])?))*)&quot;
						)
					)
				) 
			)</errorConditionFormula>
        <errorMessage>One or both of the email address fields contains one or more invalid email addresses.</errorMessage>
    </validationRules>
</CustomObject>